Fix footer alignment.

--- a/_11ty/css/style.css
+++ b/_11ty/css/style.css
@@ -136,6 +136,15 @@ footer .content, header .content {
 	flex-direction: row;
 }
 
+footer .content {
+  align-items: center;
+}
+
+footer .content .menu {
+  display: flex;
+  align-items: center;
+}
+
 main {
   margin-top: 2vh;
   flex: 50 0 0;
